--- a/07-rest-server/public/index.html
+++ b/07-rest-server/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>RestServer</title>
-	</head>
-	<body>
-		<h1>Rest Server</h1>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Acceso denegado</title>
+</head>
+<body>
+
+    <h1>Acceso Denegado</h1>
+    
+</body>
 </html>
